--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "next": "12.1.5",
-    "rc-slider": "9.7.1",
+    "quill": "^1.3.7",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-quill": "^1.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.27",
