--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^6.3.1",
     "next": "12.1.5",
     "nodemailer": "^6.7.4",
+    "nookies": "^2.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
