--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
@@ -19,7 +20,12 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
-    "react-quill": "^1.3.5"
+    "react-quill": "^1.3.5",
+    "react-redux": "7.2.6",
+    "react-toastify": "^8.2.0",
+    "redux": "4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
