--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google-auth-library": "^8.0.2",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.1",
     "next": "12.1.5",
     "nodemailer": "^6.7.4",
