--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.3.2",
+    "@react-pdf-viewer/default-layout": "^3.3.2",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "google-auth-library": "^8.0.2",
@@ -18,6 +20,7 @@
     "mongoose": "^6.3.1",
     "next": "12.1.5",
     "nodemailer": "^6.7.4",
+    "pdfjs-dist": "2.8.335",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
