--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.3.2",
     "@react-pdf-viewer/default-layout": "^3.3.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "google-auth-library": "^8.0.2",
@@ -25,11 +26,8 @@
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
     "react-quill": "^1.3.5",
-    "react-redux": "7.2.6",
-    "react-toastify": "^8.2.0",
-    "redux": "4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "react-redux": "^8.0.1",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
